--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <div id="bg-hearts"></div>
 
         <div class="rose-wrapper">
+            <div class="click-prompt">Click to open your gift! ✨</div>
+            
             <div class="rose-card" id="roseBox">
+                <div class="box-lid" id="boxLid"></div>
+                
                 <div class="glow-aura"></div>
                 <div class="card-particles" id="cardParticles"></div>
                 <img src="rose.png" alt="Kawaii Rose" class="main-rose">
